opinion-app/src/pages/discussion-detail/discussion-detail.styles.css
.discussion-detail-container{
    height: 100%;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-direction: column;
    overflow-y: auto;
    padding-top: var(--basic-padding);
}
.discussion-info{
    width: 100%;
}

.discussion-content{
    padding-bottom: calc(var(--basic-padding)*0.5);
    border-bottom: var(--border-light);
}

.discussion-options{
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

.discussion-info-extra{
    padding-top: calc(var(--basic-padding) * 0.5);
    padding-bottom: calc(var(--basic-padding) * 2);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#discussion-comments-container{
    height: auto;
    width: 100%;
    padding: 0;
    margin: 0;
}
#discussion-comments-container > div{
    border-left: none;
    padding: 0;
    margin: 0;
}

#discussion-comments-container > div > div:first-child{
    margin-top: 0;
}

